--- a/index.html
+++ b/index.html
@@ -147,19 +147,17 @@
 
             <p class="section-subtitle">Vertex Deposito Dental</p>
 
-            <h1 class="h1 hero-title">We Are Best Dental Service</h1>
+            <h1 class="h1 hero-title">El deposito dental que necesitas</h1>
 
             <p class="hero-text">
-              Donec vitae libero non enim placerat eleifend aliquam erat volutpat. Curabitur diam ex, dapibus purus
-              sapien, cursus sed
-              nisl tristique, commodo gravida lectus non.
+              Aqui encontraras todo lo que necesitas para tu practica profesional o todo material necesario para tu formacion academica
             </p>
 
             <form action="" class="hero-form">
               <input type="email" name="email_address" aria-label="email" placeholder="Your Email Address..." required
                 class="email-field">
 
-              <button type="submit" class="btn">Get Call Back</button>
+              <button type="submit" class="btn">Informacion</button>
             </form>
 
           </div>
@@ -182,9 +180,9 @@
       <section class="section service" id="service" aria-label="service">
         <div class="container">
 
-          <p class="section-subtitle text-center">Our Services</p>
+          <p class="section-subtitle text-center">Nuestros Productos</p>
 
-          <h2 class="h2 section-title text-center">What We Provide</h2>
+          <h2 class="h2 section-title text-center">CATALOGO</h2>
 
           <ul class="service-list">
 
