--- a/index.html
+++ b/index.html
@@ -364,12 +364,10 @@
 
         <div class="footer-brand">
 
-          <a href="#" class="logo">Dentelo.</a>
+          <a href="#" class="logo">Vertex.</a>
 
           <p class="footer-text">
-            Mauris non nisi semper, lacinia neque in, dapibus leo. Curabitur sagittis libero tincidunt tempor finibus.
-            Mauris at
-            dignissim ligula, nec tristique orci.Quisque vitae metus.
+            Deposito dental de Mexicali, Todo lo necesario para ti.
           </p>
 
           <div class="schedule">
@@ -378,8 +376,8 @@
             </div>
 
             <span class="span">
-              Monday - Saturday:<br>
-              9:00am - 10:00Pm
+              Lunes a Domingo:<br>
+              07:00am - 09:00Pm
             </span>
           </div>
 
@@ -388,14 +386,14 @@
         <ul class="footer-list">
 
           <li>
-            <p class="footer-list-title">Other Links</p>
+            <p class="footer-list-title">Otros links</p>
           </li>
 
           <li>
             <a href="#" class="footer-link">
               <ion-icon name="add-outline"></ion-icon>
 
-              <span class="span">Home</span>
+              <span class="span">Inicio</span>
             </a>
           </li>
 
@@ -403,7 +401,7 @@
             <a href="#" class="footer-link">
               <ion-icon name="add-outline"></ion-icon>
 
-              <span class="span">About Us</span>
+              <span class="span">Acerca de</span>
             </a>
           </li>
 
@@ -411,7 +409,7 @@
             <a href="#" class="footer-link">
               <ion-icon name="add-outline"></ion-icon>
 
-              <span class="span">Services</span>
+              <span class="span">Productos</span>
             </a>
           </li>
 
@@ -427,7 +425,7 @@
             <a href="#" class="footer-link">
               <ion-icon name="add-outline"></ion-icon>
 
-              <span class="span">Our Team</span>
+              <span class="span">Nuestro equipo</span>
             </a>
           </li>
 
