--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
         <ul class="footer-list">
 
           <li>
-            <p class="footer-list-title">Contact Us</p>
+            <p class="footer-list-title">Contactanos</p>
           </li>
 
           <li class="footer-item">
@@ -507,8 +507,8 @@
             </div>
 
             <address class="item-text">
-              1247/Plot No. 39, 15th Phase,<br>
-              LHB Colony, Kanpur
+              Calle Lago Ginebra #1249 Local 1,<br>
+              Mexicali, Baja California
             </address>
           </li>
 
@@ -517,7 +517,7 @@
               <ion-icon name="call-outline"></ion-icon>
             </div>
 
-            <a href="tel:+917052101786" class="footer-link">+91-7052-101-786</a>
+            <a href="tel:+917052101786" class="footer-link">+52 686 646 9903</a>
           </li>
 
           <li class="footer-item">
@@ -525,7 +525,7 @@
               <ion-icon name="mail-outline"></ion-icon>
             </div>
 
-            <a href="mailto:help@example.com" class="footer-link">help@example.com</a>
+            <a href="mailto:help@example.com" class="footer-link">depositodentalvertex@gmail.com</a>
           </li>
 
         </ul>
@@ -537,7 +537,7 @@
       <div class="container">
 
         <p class="copyright">
-          &copy; 2022 All Rights Reserved by codewithsadee.
+          &copy; 2025 Todos los derechos reservados.
         </p>
 
         <ul class="social-list">
